--- a/app/styles.css
+++ b/app/styles.css
@@ -39,7 +39,7 @@
 
 /*Project css starts*/
 .projectCard {
-    @apply py-6 w-3/5 mx-auto space-y-2 border-b-2 border-gray-500 my-3;
+    @apply py-6 w-[95%] md:w-3/5 mx-auto space-y-2 border-b-2 border-gray-500 my-3;
 }
 
 .authorInfo {
